--- a/Report.Rmd
+++ b/Report.Rmd
@@ -142,6 +142,8 @@ colnames(LT.numer) <- colnames(data.LT)
 ```
 
 ## Learning Tool Domain Analysis
+For Learning Tools table in TELL Statements, we numeric character answers of LT 1a~5c Confidence, and NA values stay as same as NA that will not count in. First, I made CFA models for each subdomain (ex: LT1 has 3 variables: LT1a_Confidence, LT1b_Confidence, LT1c_Confidence).Then we have an available P-value for each subdomain and we find factor loadings of each variables in each subdomain. Third, we compare P-value of each subdomain to 0.05, if P-value > 0.05, our null hypothesis retained, and we do not need to make any further change on that subdomain; if P-value < 0.05, it means our null hypothesis is rejected, and we need to remodel by droping the variable with lowest factor loadings in that subdomain and check its P-value again. Following are detailed results:
+# First subdomain:
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 LT1 <- 'lt1 =~ aa*LT1a_Confidence + aa*LT1b_Confidence + LT1c_Confidence '
 fit1 <- cfa(LT1,data=LT.numer,std.lv=T)
@@ -153,6 +155,12 @@ parameterEstimates(fit1,standardized=T) %>%
   select('Latent Factor'=lhs,Indicator=rhs,B=est,SE=se,Z=z,'p-value'=pvalue,loading=std.all) %>%
   kable(digits = 3, format="pandoc", caption="Factor Loadings")
 #P-value=0.741>0.05. Factor loadings: a-0.488;b-0.472;c-0.722. cfi=1;ltli=1.607.
+```
+
+Since p-value of the first subdomain is 0.741 > 0.05, there is no need to make any change in the first subdomain and we can save all questions. 
+
+# Second subdomain
+```{r echo=FALSE, message=FALSE, warning=FALSE }
 LT2 <- 'lt2 =~ aa*LT2a_Confidence + aa*LT2b_Confidence + LT2c_Confidence'
 fit2 <- cfa(LT2,data=LT.numer,std.lv=T)
 summary(fit2,standardized=T)
@@ -163,7 +171,13 @@ parameterEstimates(fit2,standardized=T) %>%
   select('Latent Factor'=lhs,Indicator=rhs,B=est,SE=se,Z=z,'p-value'=pvalue,loading=std.all) %>%
   kable(digits = 3, format="pandoc", caption="Factor Loadings")
 #P-value=0.953>0.05. Factor loadings: a-0.587;b-0.603;c-0.817. cfi=1; tli=1.234.
-LT3 <- 'lt3 =~ LT3a_Confidence + aa*LT3b_Confidence + aa*LT3d_Confidence'
+```
+
+Since p-value of the second subdomain is 0.953 > 0.05, there is no need to make any change in the second subdomain and we can save all questions. 
+
+# Third subdomain
+```{r echo=FALSE, message=FALSE, warning=FALSE }
+LT3 <- 'lt3 =~ LT3a_Confidence + LT3b_Confidence + LT3c_Confidence + LT3d_Confidence'
 fit3 <- cfa(LT3,data=LT.numer,std.lv=T)
 summary(fit3,standardized=T)
 fitMeasures(fit3)
@@ -173,7 +187,28 @@ parameterEstimates(fit3,standardized=T) %>%
   select('Latent Factor'=lhs,Indicator=rhs,B=est,SE=se,Z=z,'p-value'=pvalue,loading=std.all) %>%
   kable(digits = 3, format="pandoc", caption="Factor Loadings")
 #Initial p-value with 4 questions is 0.008. 
-#After dropping question c, the p-value=0.897. Factor loadings:a-0.959;b-0.802;c-0.629. cfi=1;tli=1.087.
+```
+
+Since p-value of the third subdomain is 0.008 < 0.05, and question LT3c_Confidence has the lowest factor loading 0.604, we drop LT3_c_Confidence and then remodel the third subdomain. 
+
+```{r echo=FALSE, message=FALSE, warning=FALSE }
+LT3_new <- 'lt3 =~ LT3a_Confidence + aa*LT3b_Confidence + aa*LT3d_Confidence'
+fit3new <- cfa(LT3_new,data=LT.numer,std.lv=T)
+summary(fit3new,standardized=T)
+fitMeasures(fit3new)
+modificationIndices(fit3new)
+parameterEstimates(fit3new,standardized=T) %>%
+  filter(op=="=~") %>%
+  select('Latent Factor'=lhs,Indicator=rhs,B=est,SE=se,Z=z,'p-value'=pvalue,loading=std.all) %>%
+  kable(digits = 3, format="pandoc", caption="Factor Loadings")
+#Initial p-value with 4 questions is 0.008. 
+#After dropping question c, the p-value=0.897. Factor loadings:a-0.959;b-0.802;d-0.629. cfi=1;tli=1.087.
+```
+
+After we remodel the third subdomain, the p-value of third domain is 0.897 > 0.05. Then we can save all the remaining questions in the third subdomain (LT3a_Confidence, LT3b_Confidence, LT3d_Confidence). 
+
+# Fourth subdomain
+```{r echo=FALSE, message=FALSE, warning=FALSE }
 LT4 <- 'lt4 =~ LT4a_Confidence + aa*LT4b_Confidence + aa*LT4c_Confidence'
 fit4 <- cfa(LT4,data=LT.numer,std.lv=T)
 summary(fit4,standardized=T)
@@ -184,6 +219,12 @@ parameterEstimates(fit4,standardized=T) %>%
   select('Latent Factor'=lhs,Indicator=rhs,B=est,SE=se,Z=z,'p-value'=pvalue,loading=std.all) %>%
   kable(digits = 3, format="pandoc", caption="Factor Loadings")
 #P-value=0.899. Factor loadings: a-0.469;b-1.012;c-0.886. cfi=1; tli=1.06.
+```
+
+Since p-value of the fourth subdomain is 0.899 > 0.05, there is no need to make any change in the fourth subdomain and we can save all questions. 
+
+# Fifth subdomain
+```{r echo=FALSE, message=FALSE, warning=FALSE }
 LT5 <- 'lt5 =~ aa*LT5a_Confidence + LT5b_Confidence + aa*LT5c_Confidence'
 fit5 <- cfa(LT5,data=LT.numer,std.lv=T)
 summary(fit5,standardized=T)
@@ -195,6 +236,8 @@ parameterEstimates(fit5,standardized=T) %>%
   kable(digits = 3, format="pandoc", caption="Factor Loadings")
 #P-value=0.379. Factor loadings: a-0.618;b-0.844;c-0.532. cfi=1; tli=1.055.
 ```
+
+Since p-value of the fifth subdomain is 0.379 > 0.05, there is no need to make any change in the fifth subdomain and we can save all questions. 
 
 ## PER & FEEDBACK Domain Analysis
 For PER&FEEDBACK table in TELL Statements, I numeric character answers of PF 1a~5c Confidence, and NA values stay as same as NA that will not count in. First, I made CFA models for each subdomain whose variables should greater than 2 (ex: PF1 has 5 variables: PF1a_Confidence, PF1b_Confidence, PF1c_Confidence,PF1d_Confidence and PF1e_Confidence), or the P-value of that model will become NA. And we get an exception in PF table: PF4 only has 2 varaibles, so I combine PF4 with PF5 to one CFA model so that we have an available P-value. Second, we find factor loadings of each variables in each subdomain and record them. Third, we compare P-value of each subdomain to 0.05, if P-value > 0.05, our null hypothesis retained, and we do not need to make any further change on that subdomain; if P-value < 0.05, it means our null hypothesis is rejected, and we need to remodel by droping the variable with lowest factor loadings in that subdomain and check its P-value again.
@@ -449,7 +492,9 @@ parameterEstimates(fitLE6, standardized=TRUE) %>%
 In the sixth subdomain, the p-value is 0.66>0.05. We will not drop any question in this subdomain.
 
 # Conclusion / Discussion
+
 For PER&FEEDBACK table, I dropped "PF1e_Confidence","PF2c_Confidence" and "PF5c_Confidence" so that P-value of all subdomains are greater than 0.05 finally.  
-For the Learning Experience table, we will only drop "LE2a_Confidence" and keep all the remaining questions in order to let the P-value of all subdomains are greater than 0.05 finally.
+For the Learning Experience table, we will only drop "LE2a_Confidence" and keep all the remaining questions in order to let the P-value of all subdomains are greater than 0.05 finally.      
+For the Learning Experience table, we will only drop "LT3c_Confidence" and keep all the remaining questions in order to let the P-value of all subdomains are greater than 0.05 finally.
 
 ## Appendix
